; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_inet6_hashtables.c_inet6_sk_port_offset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_inet6_hashtables.c_inet6_sk_port_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.inet_sock = type { i32 }
%struct.ipv6_pinfo = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sock*)* @inet6_sk_port_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inet6_sk_port_offset(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.inet_sock*, align 8
  %4 = alloca %struct.ipv6_pinfo*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %5 = load %struct.sock*, %struct.sock** %2, align 8
  %6 = call %struct.inet_sock* @inet_sk(%struct.sock* %5)
  store %struct.inet_sock* %6, %struct.inet_sock** %3, align 8
  %7 = load %struct.sock*, %struct.sock** %2, align 8
  %8 = call %struct.ipv6_pinfo* @inet6_sk(%struct.sock* %7)
  store %struct.ipv6_pinfo* %8, %struct.ipv6_pinfo** %4, align 8
  %9 = load %struct.ipv6_pinfo*, %struct.ipv6_pinfo** %4, align 8
  %10 = getelementptr inbounds %struct.ipv6_pinfo, %struct.ipv6_pinfo* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.ipv6_pinfo*, %struct.ipv6_pinfo** %4, align 8
  %14 = getelementptr inbounds %struct.ipv6_pinfo, %struct.ipv6_pinfo* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.inet_sock*, %struct.inet_sock** %3, align 8
  %18 = getelementptr inbounds %struct.inet_sock, %struct.inet_sock* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @secure_ipv6_port_ephemeral(i32 %12, i32 %16, i32 %19)
  ret i32 %20
}

declare dso_local %struct.inet_sock* @inet_sk(%struct.sock*) #1

declare dso_local %struct.ipv6_pinfo* @inet6_sk(%struct.sock*) #1

declare dso_local i32 @secure_ipv6_port_ephemeral(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
